--- a/wot.html
+++ b/wot.html
@@ -11,37 +11,37 @@
 
 </head>
 <body>
-    <div class="block">
-
-        <div class="third padding">
+    <div class="section-3">
+        <div>
             <div class="bulb icon"></div>
-            <div class="padding center">
+            <div class="padding">
                 <p>Bring Your Business Ideas, Problems, Challenges or Dreams to Wide Open.</p>
             </div>
-            <div class="padding">
-                <a href="#" class="hover-gray yellowgreen">Learn About Our Services</a>
+            <div class="foot-link">
+                <a href="#" class="hover-gray yellowgreen">Learn About <br> Our Services<span></span></a>
             </div>
         </div>
 
-        <div class="third padding">
+        <div>
             <div class="arrow icon"></div>
-            <div class="padding center">
+            <div class="padding">
                 <p>Wide Open's tight knit <a class="yellowgreen hover-gray">team of experts</a> becomes your team of experts, advising you on the most effective, efficient solution.</p>
             </div>
-            <div class="padding center">
-                <a href="#" class="hover-gray yellowgreen">Learn About Our Company</a>
+            <div class="foot-link">
+                <a href="#" class="hover-gray yellowgreen">Learn About <br> Our Company<span></span></a>
             </div>
         </div>
 
-        <div class="third padding">
+        <div>
             <div class="switch icon"></div>
-            <div class="padding center">
+            <div class="padding">
                 <p>Wide Open constructs, implements and maintains your amazing new technology and makes your life easier.</p>
             </div>
-            <div class="padding bottom">
-                <a href="#" class="hover-gray yellowgreen">Learn About Our Services</a>
+            <div class="foot-link">
+                <a href="#" class="hover-gray yellowgreen">See Some of the <br> Work We Have Done<span></span></a>
             </div>
         </div>
+
     
 
 
